--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,10 @@
     <groupId>Gym</groupId>
     <artifactId>gym</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <properties>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+    </properties>
 
 
 </project>
